--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <h3>Contact Info</h3>
           <p>Email: info@genzstreet.com</p>
           <p>Phone: +1 234 567 8900</p>
-          <p>Address: 123 Fashion Street, Trend City</p>
+          <p>Address: Genz Street, Trichy</p>
         </div>
       </div>
       <div class="footer-bottom">
@@ -969,8 +969,8 @@
               <div style="background: white; padding: 30px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px;">
                 <h3 style="color: #482673; margin-bottom: 15px;">Store Information</h3>
                 
-                <p style="margin-bottom: 10px;"><strong>Address:</strong> 123 Fashion Street, Trend City</p>
-                <p style="margin-bottom: 10px;"><strong>Phone:</strong> +1 234 567 8900</p>
+                <p style="margin-bottom: 10px;"><strong>Address:</strong> Genz Street, Trichy</p>
+                <p style="margin-bottom: 10px;"><strong>Phone:</strong> +91 98000 98000</p>
                 <p style="margin-bottom: 10px;"><strong>Email:</strong> info@genzstreet.com</p>
                 <p style="margin-bottom: 10px;"><strong>Hours:</strong> Mon-Sat: 9AM-8PM, Sun: 10AM-6PM</p>
               </div>
