--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="footer-section">
           <h3>Contact Info</h3>
           <p>Email: info@genzstreet.com</p>
-          <p>Phone: +1 234 567 8900</p>
+          <p>Phone: +91 98000 98000</p>
           <p>Address: Genz Street, Trichy</p>
         </div>
       </div>
