--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 GENZ STREET. All rights reserved.</p>
+        <p>&copy; 2025 GENZ STREET. All rights reserved.</p>
       </div>
     </footer>
 
@@ -603,7 +603,7 @@
             id: 4,
             name: "Yellow T-shirt",
             price: 479,
-            img: "https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=400&q=80",
+            img: "https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=400&q=",
             category: "shirts",
           },
           {
