--- a/index.html
+++ b/index.html
@@ -582,70 +582,70 @@
             id: 1,
             name: "Classic Shirt",
             price: 699,
-            img: "https://images.unsplash.com/photo-1512436991641-6745cdb1723f?auto=format&fit=crop&w=400&q=80",
+            img: "asset/classic_shirts.webp",
             category: "shirts",
           },
           {
             id: 2,
             name: "Blue Jeans",
             price: 1199,
-            img: "https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=400&q=80",
+            img: "asset/blue_jeans.webp",
             category: "pants",
           },
           {
             id: 3,
             name: "Floral Dress",
             price: 1499,
-            img: "https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=400&q=80",
+            img: "asset/floral_dress.avif",
             category: "dresses",
           },
           {
             id: 4,
             name: "Yellow T-shirt",
             price: 479,
-            img: "https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=400&q=",
+            img: "asset/yellow_tshirt.jpeg",
             category: "shirts",
           },
           {
             id: 5,
             name: "Black Jacket",
             price: 1799,
-            img: "https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=400&q=80",
+            img: "asset/black_jacket.jpg",
             category: "jackets",
           },
           {
             id: 6,
             name: "Kids Green Shirt",
             price: 399,
-            img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=400&q=80",
+            img: "asset/kids_green_shirt.jpg",
             category: "kids",
           },
           {
             id: 7,
             name: "Red Summer Shorts",
             price: 549,
-            img: "https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80",
+            img: "asset/red_shorts.avif",
             category: "pants",
           },
           {
             id: 8,
             name: "Striped Sweater",
             price: 899,
-            img: "https://images.unsplash.com/photo-1576566588028-4147f3842f27?auto=format&fit=crop&w=400&q=80",
+            img: "asset/stripped_sweater.jpg",
             category: "sweaters",
           },
           {
             id: 9,
             name: "Denim Jacket",
             price: 1299,
-            img: "https://images.unsplash.com/photo-1544022613-e87ca75a784a?auto=format&fit=crop&w=400&q=80",
+            img: "asset/denim_jacket.jpg",
             category: "jackets",
           },
           {
             id: 10,
             name: "Summer Dress",
             price: 999,
-            img: "https://images.unsplash.com/photo-1515372039744-b8f02a3ae446?auto=format&fit=crop&w=400&q=80",
+            img: "asset/summer_dress.jpg",
             category: "dresses",
           },
         ],
